@@ -1,8 +1,8 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin transfer::copy n 0.3.1]
+[manpage_begin transfer::copy::queue n 0.1]
 [copyright {2006 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Data transfer facilities}]
-[titledesc {Data transfer foundation}]
+[titledesc {Queued transfers}]
 [require Tcl                   8.4]
 [require snit                  [opt 1.0]]
 [require struct::queue         [opt 1.4]]
